--- a/Fired/Fired/Fired.csproj
+++ b/Fired/Fired/Fired.csproj
@@ -72,12 +72,16 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character.cs" />
+    <Compile Include="Employee.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="Hero.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="PhysObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Swat.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
