--- a/Fired/Fired/Fired.csproj
+++ b/Fired/Fired/Fired.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="SecurityGuard.cs" />
     <Compile Include="Structs.cs" />
     <Compile Include="Swat.cs" />
   </ItemGroup>
