--- a/Fired/Fired/Fired.csproj
+++ b/Fired/Fired/Fired.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Boss.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Enums.cs" />
